name:                epsilon-minus
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             AllRightsReserved
author:              Andy Sonnenburg
maintainer:          andy22286@gmail.com
-- copyright:           
category:            Language
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  exposed-modules:     
  other-modules:       Contents, Lens, Node, Path, ST, UnionFind
  other-extensions:    LambdaCase, NoImplicitPrelude
  ghc-options:         -Wall
  build-depends:       base >= 4.8 && < 4.9, transformers
  hs-source-dirs:      src
  default-language:    Haskell2010

test-suite doctests
  type:          exitcode-stdio-1.0
  ghc-options:   -threaded -Wall
  main-is:       test/doctests.hs
  build-depends: base, doctest >= 0.8, QuickCheck
  default-language: Haskell2010
